[package]
name = "TestLoad"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
#strip = "debuginfo" # Removing this prevent the cargo bloat from working
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false


# Need to add panic_immediate_abort ? "cargo bloat --release" shows a lot of backtrace things
# https://github.com/rust-lang/rust/issues/54981

[dependencies]
bitflags = "1.3"

[dependencies.windows-sys]
version = "0.45.0"
features = [
    "Win32_Foundation",
    "Win32_Globalization",
    "Win32_System_LibraryLoader",
    "Win32_System_Performance",
    "Win32_System_DataExchange",
    "Win32_System_Ole",
    "Win32_System_Memory",
    "Win32_System_Console",
    "Win32_UI",
    "Win32_UI_HiDpi",    
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_Graphics",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_OpenGL",
    "Win32_UI_Input",
    "Win32_UI_Controls",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Devices",
    "Win32_Devices_HumanInterfaceDevice",
]